test.txt
savindu@savindu-Katana-GF66-11SC:~/LiDAR_Interface/slam_lidar_cpp/build$ make -j4
[ 12%] Building CXX object CMakeFiles/lidar_reader.dir/src/lidar_reader.cpp.o
[ 25%] Building CXX object CMakeFiles/read_packets.dir/src/read_packets.cpp.o
/home/savindu/LiDAR_Interface/slam_lidar_cpp/src/lidar_reader.cpp: In member function ‘std::vector<ScanPoint> LiDARReader::readScan()’:
/home/savindu/LiDAR_Interface/slam_lidar_cpp/src/lidar_reader.cpp:90:8: error: ‘array’ is not a member of ‘std’
   90 |   std::array<decltype(packet.BlockID[0]), BLOCKS_PER_SCAN> blocks;
      |        ^~~~~
/home/savindu/LiDAR_Interface/slam_lidar_cpp/src/lidar_reader.cpp:14:1: note: ‘std::array’ is defined in header ‘<array>’; did you forget to ‘#include <array>’?
   13 | #include <cmath>
  +++ |+#include <array>
   14 | 
/home/savindu/LiDAR_Interface/slam_lidar_cpp/src/lidar_reader.cpp:90:14: error: expected primary-expression before ‘decltype’
   90 |   std::array<decltype(packet.BlockID[0]), BLOCKS_PER_SCAN> blocks;
      |              ^~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/savindu/LiDAR_Interface/slam_lidar_cpp/src/lidar_reader.cpp:91:3: error: ‘blocks’ was not declared in this scope; did you mean ‘lockf’?
   91 |   blocks[0] = b0;
      |   ^~~~~~
      |   lockf
make[2]: *** [CMakeFiles/lidar_reader.dir/build.make:76: CMakeFiles/lidar_reader.dir/src/lidar_reader.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:89: CMakeFiles/lidar_reader.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
[ 37%] Linking CXX executable read_packets
[ 37%] Built target read_packets
make: *** [Makefile:91: all] Error 2
